Update text style class names

--- a/src/index.pug
+++ b/src/index.pug
@@ -32,7 +32,7 @@ html(lang='en')
       .container
         .nav_boxes#nav_boxes
           .nav_box#about
-            h2.heading.heavy About
+            h2.heading.b About
             .profile_pic(title='Hello, World!')
             p
               span I work as a full-stack web developer and graphic designer.
@@ -45,16 +45,16 @@ html(lang='en')
             a(href='https://github.com/max-segale/portfolio/tree/master/src' target='_blank' rel='noopener')
               .btn View Source Code
           .nav_box#contact
-            h2.heading.heavy Contact
+            h2.heading.b Contact
             .left
               p Please contact me about any new projects or job opportunities.
               p
                 a(href='tel:(908)752-0639')
-                  span.u_line 908.752.0639
+                  span.u 908.752.0639
                   span(role='img' aria-label='mobile phone') 📱
                 br
                 a(href='mailto:maxsegale@me.com')
-                  span.u_line maxsegale@me.com
+                  span.u maxsegale@me.com
                   span(role='img' aria-label='incoming envelope') 📨
             .message_box
               form(name='ask')
@@ -66,7 +66,7 @@ html(lang='en')
                   input.btn(type='submit' name='send' value='Send')
                   .status#msg_status
         .content
-          span.heading.heavy#gallery_title
+          span.heading.b#gallery_title
           ul#gallery_list
             li.loading
     footer
