--- a/src/style.scss
+++ b/src/style.scss
@@ -76,10 +76,10 @@ img {
   font-size: 1.25rem;
   text-transform: capitalize;
 }
-.heavy {
+.b {
   font-weight: 700;
 }
-.u_line {
+.u {
   text-decoration: underline;
 }
 .btn {
