Updated file name

--- a/src/index.pug
+++ b/src/index.pug
@@ -14,7 +14,7 @@ html(lang='en')
     meta(name='apple-mobile-web-app-capable' content='yes')
     meta(http-equiv='X-UA-Compatible' content='IE=edge')
     title #{myName} 👨🏻‍💻 Portfolio
-    link(rel='stylesheet' type='text/css' href='style.css')
+    link(rel='stylesheet' type='text/css' href='styles.css')
     script(type='text/javascript' src='scripts.js')
   body
     .wrapper
