--- a/src/styles.sass
+++ b/src/styles.sass
@@ -123,14 +123,23 @@ img
   min-height: 100vh
   padding: 2vh 0 5vh
 
-.container
-  overflow: hidden
+// Loading view
+.loading
+  width: 100%
+  height: 100vh
+  position: fixed
+  left: 0
+  top: 0
+  z-index: 50
+  opacity: 0.25
+  background: url($imgLoad) center center / 125px no-repeat
+  animation: loadPulse 750ms ease infinite alternate
 
 // Header section
 header
   position: sticky
-  z-index: 25
   top: 0
+  z-index: 25
   padding: 10px 0
   background-color: $whiteTran
   backdrop-filter: blur(32px)
@@ -358,6 +367,7 @@ form[name='ask']
 
   li
     height: 25vh
+    min-height: 8rem
     position: relative
     overflow: hidden
     margin: 4vh 0 0 0
@@ -404,11 +414,11 @@ form[name='ask']
 
       &.sliding
         will-change: width
-        animation: sliderWrap 15000ms linear infinite alternate
+        //animation: sliderWrap 15000ms linear infinite alternate
 
         .row
           will-change: transform
-          animation: sliderRow 15000ms linear infinite alternate
+          //animation: sliderRow 15000ms linear infinite alternate
 
       .row
         height: 100%
@@ -442,13 +452,13 @@ form[name='ask']
 .projects
 
   li
-    margin: 10vh 0 0
+    max-width: $fullWidth
+    margin: 10vh auto 0
     animation: projItem 500ms ease-out
     position: relative
 
     .info
-      max-width: $fullWidth
-      margin: 0 auto 10px
+      margin: 0 0 10px
       padding: 0 20px
 
       .name
@@ -467,8 +477,6 @@ form[name='ask']
             content: " »"
 
     .images
-      max-width: $fullWidth
-      margin: 0 auto
       border: 2px solid $boxColor
       background: $boxColor
       display: flex
@@ -486,7 +494,6 @@ form[name='ask']
         img
           max-width: 100%
           max-height: 100%
-          margin: 0 auto
           object-fit: contain
           object-position: center center
 
@@ -623,18 +630,6 @@ form[name='ask']
   background: url($imgCloseW) center center / 100% no-repeat
   cursor: pointer
 
-// Loading view
-.loading
-  width: 100%
-  height: 100vh
-  position: fixed
-  left: 0
-  top: 0
-  z-index: 50
-  opacity: 0.25
-  background: url($imgLoad) center center / 125px no-repeat
-  animation: loadPulse 750ms ease infinite alternate
-
 // Footer section
 footer
   padding: 0 0 5vh
@@ -751,15 +746,6 @@ footer
     .message_box
       padding: 0 0 0 15px
 
-  .projects li .images .image
-    flex: 1 0 50%
-
-    &:first-child:not(.tall)
-      flex: 1 0 100%
-
-    &.wide
-      flex: 1 0 100%
-
 // Large size layout
 @media (min-width: $bigWidth)
 
@@ -794,6 +780,21 @@ footer
 
   ul.menu > li.sub_title
     flex: 0 0 0
+
+  .projects li
+    display: flex
+    flex-flow: row nowrap
+    justify-content: space-around
+    align-items: flex-start
+
+    .info
+      margin: 0
+      flex: 4 0 0
+      position: sticky
+      top: 80px
+
+    .images
+      flex: 10 0 0
 
 // Animation frames
 @keyframes fromLeft
