--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -31,10 +31,10 @@ html(lang='en')
         h3.heading-2 I specialize in front-end web development and UI/UX design
       .image-row.left#hero-images-1
         each image in heroImages[0]
-          img(src=image.link alt=image.caption)
+          img(src='img/' + image.file alt=image.caption)
       .image-row.right#hero-images-2
         each image in heroImages[1]
-          img(src=image.link alt=image.caption)
+          img(src='img/' + image.file alt=image.caption)
     section.intro
       .container
         h3.heading-2 About
