Updated variable names

--- a/src/styles/_sections.sass
+++ b/src/styles/_sections.sass
@@ -95,12 +95,12 @@ header
   animation: fadeIn 1s linear
 
   .title
-    max-width: $fullWidth
+    max-width: $xlWidth
     margin: 0 auto
     padding: 0 1rem
 
   .project
-    max-width: $fullWidth
+    max-width: $xlWidth
     margin: 0 auto 10vh
 
     .info
@@ -133,7 +133,7 @@ header
 
 // Message form
 form[name='ask']
-  max-width: $smallWidth
+  max-width: $smWidth
   margin: 0 auto
 
   &, > *
