--- a/src/styles/_sizes.sass
+++ b/src/styles/_sizes.sass
@@ -1,12 +1,12 @@
 
 // Medium size layout
-@media (min-width: $midWidth)
+@media (min-width: $mdWidth)
 
   html, body
     font-size: 18px
 
 // Full size layout
-@media (min-width: $fullWidth)
+@media (min-width: $xlWidth)
 
   html, body
     font-size: 20px
