--- a/src/styles/_variables.sass
+++ b/src/styles/_variables.sass
@@ -1,10 +1,10 @@
 
 
 // Set responsive breakpoints
-$smallWidth: 375px
-$midWidth: 568px
-$bigWidth: 724px
-$fullWidth: 1024px
+$smWidth: 375px
+$mdWidth: 568px
+$lgWidth: 724px
+$xlWidth: 1024px
 
 // Set fonts and colors
 $fontFam: "Helvetica Neue", "Helvetica", sans-serif
