Updating variable values

--- a/src/styles/_modals.sass
+++ b/src/styles/_modals.sass
@@ -41,10 +41,10 @@
       cursor: pointer
 
     .prev
-      background-image: url($imgBackW)
+      background-image: url(img/icons/back.svg)
 
     .next
-      background-image: url($imgForwardW)
+      background-image: url(img/icons/forward.svg)
 
     .caption
       font-weight: 300
@@ -130,7 +130,7 @@
   z-index: 300
   right: 10px
   top: 10px
-  background: url($imgCloseW) center center / 100% no-repeat
+  background: url(img/icons/close.svg) center center / 100% no-repeat
   cursor: pointer
 
 .modal-backdrop
