--- a/src/styles/_sections.sass
+++ b/src/styles/_sections.sass
@@ -85,7 +85,7 @@ header
     max-height: 12em
     margin: 0 0 1rem 1rem
     border-radius: 50%
-    background: $midColor url($imgSelf) center / cover no-repeat
+    background: $midColor
     float: right
     animation: rollIn 2s ease-out
 
