--- a/src/styles/_variables.sass
+++ b/src/styles/_variables.sass
@@ -1,13 +1,15 @@
 
 
-// Set responsive breakpoints
+// Responsive breakpoints
 $smWidth: 375px
 $mdWidth: 568px
 $lgWidth: 724px
 $xlWidth: 1024px
 
-// Set fonts and colors
+// Fonts
 $fontFam: "Helvetica Neue", "Helvetica", sans-serif
+
+// Colors
 $fontColor: rgba(0, 0, 0, 1)
 $backColor: rgba(255, 255, 255, 1)
 $boxColor: rgba(222, 222, 222, 1)
@@ -16,16 +18,3 @@ $blueColor: rgba(10, 132, 255, 1)
 $blackTran: rgba(0, 0, 0, 0.8)
 $greyTran: rgba(50, 50, 50, 0.96)
 $whiteTran: rgba(255, 255, 255, 0.75)
-
-// Background images
-$imgSelf: 'img/me.jpg'
-$imgLoad: 'img/icons/max-segale.svg'
-$imgMenu: 'img/icons/menu-24px.svg'
-$imgMoreB: 'img/icons/more-24px-b.svg'
-$imgMoreW: 'img/icons/more-24px-w.svg'
-$imgRightB: 'img/icons/right-24px-b.svg'
-$imgRightW: 'img/icons/right-24px-w.svg'
-$imgCloseB: 'img/icons/close-24px-b.svg'
-$imgCloseW: 'img/icons/close-24px-w.svg'
-$imgForwardW: 'img/icons/forward-24px.svg'
-$imgBackW: 'img/icons/back-24px.svg'
