--- a/src/styles/_modals.sass
+++ b/src/styles/_modals.sass
@@ -29,7 +29,7 @@
   .ctl_box
     width: 100%
     height: 30px
-    max-width: $mdWidth
+    max-width: $smWidth
     display: flex
     flex-flow: row nowrap
     padding: 0 10px
@@ -88,7 +88,7 @@
 
   .thumbs_box
     width: 100%
-    max-width: $mdWidth
+    max-width: $smWidth
     margin: 2vh 0
     padding: 0 10px
 
