--- a/src/styles/_sections.sass
+++ b/src/styles/_sections.sass
@@ -97,12 +97,12 @@ header
   animation: fadeIn 1s linear
 
   .title
-    max-width: $xlWidth
+    max-width: $lgWidth
     margin: 0 auto
     padding: 0 1rem
 
   .project
-    max-width: $xlWidth
+    max-width: $lgWidth
     margin: 0 auto 10vh
 
     .info
@@ -133,7 +133,7 @@ header
         border-radius: .25rem
         box-shadow: 0 0 .2rem 0 rgba(0, 0, 0, 0.2)
 
-    @media (min-width: $xlWidth)
+    @media (min-width: $lgWidth)
       display: flex
       flex-flow: row nowrap
       justify-content: space-around
