--- a/src/styles/_globals.sass
+++ b/src/styles/_globals.sass
@@ -23,10 +23,10 @@ html, body
   -webkit-touch-callout: none
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0)
 
-  @media (min-width: $mdWidth)
+  @media (min-width: $smWidth)
     font-size: 18px
 
-  @media (min-width: $xlWidth)
+  @media (min-width: $lgWidth)
     font-size: 20px
 
 h1, h2, h3, h4, h5, h6
@@ -74,7 +74,7 @@ button
 
 // General classes
 .container
-  max-width: $lgWidth
+  max-width: $mdWidth
   margin: 0 auto
   padding: 0 1rem
 
