Updated border width

--- a/src/styles/_sections.sass
+++ b/src/styles/_sections.sass
@@ -170,7 +170,7 @@ form[name='ask']
     padding: .5rem 0
 
   textarea
-    border-top: .1rem solid $boxColor
+    border-top: 2px solid $boxColor
     padding: .5rem 0
     resize: none
 
