Improve modal fade in

--- a/src/styles/_modals.sass
+++ b/src/styles/_modals.sass
@@ -136,4 +136,4 @@
   background: $greyTran
   backdrop-filter: blur(32px)
   transition: opacity 500ms linear
-  animation: fadeIn 1s linear
+  animation: fadeIn 500ms linear
