Color variable update

--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -39,7 +39,7 @@ html(lang='en')
       .container
         h3.heading-2 About
         .picture(title='Hello, World!')
-          img(src='img/me.jpg' alt='A photo of me')
+          img(src='img/me.jpg' alt=myName)
         p
           span I work as a full-stack web developer and graphic designer.
           span I specialize in front-end development and UI/UX design.
