--- a/src/styles/_variables.sass
+++ b/src/styles/_variables.sass
@@ -7,11 +7,11 @@ $lgWidth: 1024px
 $fontFam: "Helvetica Neue", "Helvetica", sans-serif
 
 // Colors
-$fontColor: rgba(0, 0, 0, 1)
-$backColor: rgba(255, 255, 255, 1)
-$boxColor: rgba(222, 222, 222, 1)
+$lightColor: rgba(255, 255, 255, 1)
 $midColor: rgba(140, 140, 140, 1)
-$blueColor: rgba(10, 132, 255, 1)
-$blackTran: rgba(0, 0, 0, 0.8)
-$greyTran: rgba(50, 50, 50, 0.96)
-$whiteTran: rgba(255, 255, 255, 0.75)
+$darkColor: rgba(0, 0, 0, 1)
+$boxColor: rgba(222, 222, 222, 1)
+$accentColor: rgba(10, 132, 255, 1)
+$lightTrans: rgba(255, 255, 255, 0.75)
+$midTrans: rgba(50, 50, 50, 0.96)
+$darkTrans: rgba(0, 0, 0, 0.8)
