--- a/src/styles/_globals.sass
+++ b/src/styles/_globals.sass
@@ -6,8 +6,8 @@
   box-sizing: border-box
 
   &::selection
-    color: $backColor
-    background-color: $blueColor
+    color: $lightColor
+    background-color: $accentColor
 
 html, body
   width: 100%
@@ -15,8 +15,8 @@ html, body
   text-align: left
   font-size: 16px
   font-family: $fontFam
-  color: $fontColor
-  background-color: $backColor
+  color: $darkColor
+  background-color: $lightColor
   scroll-behavior: smooth
   text-size-adjust: none
   -webkit-touch-callout: none
@@ -41,7 +41,7 @@ p
   margin: 1rem 0
 
   a > span
-    color: $blueColor
+    color: $accentColor
     text-decoration: underline
 
 ul
@@ -60,16 +60,16 @@ button
   border-radius: .25rem
   padding: .25rem .75rem
   text-align: center
-  color: $backColor
-  background-color: $blueColor
+  color: $lightColor
+  background-color: $accentColor
   cursor: pointer
   transition: box-shadow 125ms linear
 
   &:hover
-    box-shadow: inset 0 0 .25rem 0 $blackTran
+    box-shadow: inset 0 0 .25rem 0 $darkTrans
 
   &:active
-    box-shadow: inset 0 0 .5rem 0 $blackTran
+    box-shadow: inset 0 0 .5rem 0 $darkTrans
 
 // General classes
 .container
