--- a/src/styles/_sections.sass
+++ b/src/styles/_sections.sass
@@ -43,7 +43,7 @@ header
 
     *
       padding: .5rem
-      background: $whiteTran
+      background: $lightTrans
       backdrop-filter: blur(32px)
 
   .image-row
@@ -123,7 +123,7 @@ header
         margin: 1rem 0
 
     .link-out > a
-      color: $blueColor
+      color: $accentColor
 
       > span
         text-decoration: underline
@@ -170,8 +170,8 @@ form[name='ask']
     width: 100%
     display: block
     border: none
-    color: $fontColor
-    background-color: $backColor
+    color: $darkColor
+    background-color: $lightColor
 
   input[type='email']:focus, textarea:focus
     background-color: $boxColor
