--- a/src/styles/_modals.sass
+++ b/src/styles/_modals.sass
@@ -89,9 +89,9 @@
       height: 1.5rem
       flex: 9 0 0
       margin-left: .5rem
-      border: 2px solid $midColor
+      border: 2px solid $lightColor
       border-radius: .5rem
-      background: $darkColor
+      background: $lightColor
       position: relative
       overflow: hidden
       transition: flex 250ms linear
@@ -111,10 +111,7 @@
 
       &.selected
         flex: 10 0 0
-        border-color: $lightColor
-
-        > img
-          opacity: 0.5
+        border-color: $accentColor
 
 .modal-close
   width: 1.5rem
