--- a/src/styles/_variables.sass
+++ b/src/styles/_variables.sass
@@ -12,6 +12,6 @@ $midColor: rgba(140, 140, 140, 1)
 $darkColor: rgba(0, 0, 0, 1)
 $boxColor: rgba(222, 222, 222, 1)
 $accentColor: rgba(10, 132, 255, 1)
-$lightTrans: rgba(255, 255, 255, 0.75)
-$midTrans: rgba(50, 50, 50, 0.96)
-$darkTrans: rgba(0, 0, 0, 0.8)
+$lightTrans: rgba(255, 255, 255, .75)
+$midTrans: rgba(50, 50, 50, .96)
+$darkTrans: rgba(0, 0, 0, .8)
